--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,8 +15,12 @@
 }
 
 .previousWork {
-  margin: 120px auto;
   width: fit-content;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 120px;
+  margin-bottom: 130px;
 }
 
 .workMessage {
@@ -41,6 +45,11 @@
   text-decoration: underline;
 }
 
+.previousWorkTitle {
+  margin: 0 auto 50px auto;
+  text-align: center;
+}
+
 @media (min-width: 426px) {
   .upperline {
     display: none;
@@ -63,7 +72,6 @@
 
 @media (max-width: 736px) {
   .previousWork {
-    margin: 100px 0;
     width: 95%;
   }
 }
