--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,8 +19,8 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 120px;
-  margin-bottom: 130px;
+  margin-top: 100px;
+  margin-bottom: 80px;
 }
 
 .workMessage {
@@ -55,6 +55,10 @@
     display: none;
   }
   .about {
+    margin-top: 120px;
+    margin-bottom: 130px;
+  }
+  .previousWork {
     margin-top: 120px;
     margin-bottom: 130px;
   }
