ready to upload

--- a/styles/Box.module.css
+++ b/styles/Box.module.css
@@ -13,6 +13,7 @@
     position: absolute;
     border-bottom-right-radius: 10px;
     border-top-left-radius: 10px;
+    max-width: 280px;
 }
 
 .box:hover {
