--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,12 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+/* 
 a {
   color: inherit;
   text-decoration: none;
-}
+} 
+*/
 
 * {
   box-sizing: border-box;
