--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,12 +1,12 @@
 .about {
-    text-align: center;
+    text-align: left;
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .title {
-    font-size: 20px;
+    font-size: 40px;
     color: #226E93;
     margin: 30px 0;
 }
@@ -15,5 +15,4 @@
     line-height: 35px;
     font-size: 18px;
     color: #505050;
-    margin-bottom: 30px;
 }
