--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,6 +23,10 @@
   margin-bottom: 80px;
 }
 
+.previousWork:hover .workMessage {
+  text-decoration: underline;
+}
+
 .workMessage {
   color: #226E93;
   font-size: 16px;
@@ -30,7 +34,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .smallScreens {
@@ -80,6 +84,10 @@
   }
 }
 
+.logoImg {
+  width: 320px;
+  margin-bottom: 30px;
+}
 /* .container {
   padding: 0 2rem;
 }
