--- a/styles/layouts/Footer.module.css
+++ b/styles/layouts/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-    background-color: #226E93;
-    color: white;
+    background-color: #ffffff;
+    color: #545452;
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -27,16 +27,16 @@
 .iconsBox {
     padding-top: 20px;
     padding-bottom: 20px;
-    border-top: 1px solid #ffffff;
-    border-bottom: 1px solid #ffffff;
+    /* border-top: 1px solid #545452;
+    border-bottom: 1px solid #545452; */
     text-align: center;
     margin: 20px 0;
     width: 100%;
 }
 
 .iconsBox a {
-    margin-right: 15px;
-    margin-left: 15px;
+    margin-right: 30px;
+    margin-left: 30px;
 }
 
 @media (min-width: 550px) {
