--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -20,7 +20,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
-  margin-bottom: 80px;
+  /* margin-bottom: 30px; */
 }
 
 .previousWork:hover .workMessage {
@@ -64,7 +64,7 @@
   }
   .previousWork {
     margin-top: 60px;
-    margin-bottom: 130px;
+    margin-bottom: 100px;
   }
 }
 
