--- a/styles/layouts/Header.module.css
+++ b/styles/layouts/Header.module.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 8px;
+    padding: 8px 24px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -43,4 +43,10 @@
 
 .nav *:hover {
     color: #1A4F6D;
+}
+
+@media (max-width: 1000px) {
+    .logo div h1 {
+        display: none;
+    }
 }
