--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -1,216 +1,34 @@
-.upperline {
-  border-top: 1px #b4b4b4 solid;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-.aboutline {
-  border-top: 1px #b4b4b4 solid;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-.about {
-  margin: 80px 10px;
-}
-
-.previousWork {
-  width: fit-content;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
-  /* margin-bottom: 30px; */
-}
-
-.previousWork:hover .workMessage {
-  text-decoration: underline;
-}
-
-.workMessage {
-  color: #226E93;
-  font-size: 16px;
-  cursor: pointer;
-  display: flex;
+.banner {
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  margin: 60px 50px;
 }
 
-.smallScreens {
- display: block;
+.banner h2 {
+  font-size: 45px;
 }
 
-.bigScreens {
-  display: none;
+.image {
+  padding: 40px;
 }
 
-.workMessage:hover {
-  text-decoration: underline;
-}
-
-.previousWorkTitle {
-  margin: 0 auto 50px auto;
-  text-align: center;
-}
-
-@media (min-width: 426px) {
-  .upperline {
-    display: none;
-  }
-  .about {
-    margin-top: 120px;
-    margin-bottom: 130px;
-  }
-  .previousWork {
-    margin-top: 60px;
-    margin-bottom: 100px;
-  }
-}
-
-@media (min-width: 736px) {
-  .smallScreens {
-   display: none;
+@media (max-width: 1000px) {
+  .banner {
+    display: flex;
+    flex-direction: column;
+    margin: 60px 0;
   }
   
-  .bigScreens {
-    display: block;
+  .banner *{
+    text-align: center;
+  }
+
+  .banner h2 {
+    font-size: 38px;
+  }
+
+  .image {
+    padding: 30px;
+    margin-top: 50px;
   }
 }
-
-@media (max-width: 736px) {
-  .previousWork {
-    width: 95%;
-  }
-}
-
-
-/* .container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
-} */
